--- a/src/components/ButtonCopyText/index.astro
+++ b/src/components/ButtonCopyText/index.astro
@@ -26,64 +26,4 @@ const {
   <slot />
 </CallToAction>
 
-<script>
-  const buttons = document.querySelectorAll("button.copy-text");
-  const toast = document.querySelector("#toast");
-  const toastContent = toast.querySelector("span");
-
-  function showToast() {
-    toast.classList.add("show");
-  }
-
-  function hideToast() {
-    toast.classList.add("hide");
-  }
-
-  function onUserScrolls() {
-    toast.classList.add("hide");
-  }
-
-  function copyText(text: string) {
-    if (!navigator.clipboard) {
-      return import("./scripts/fallback.copyText").then(
-        ({ fallbackCopyText }) => {
-          return fallbackCopyText(text);
-        },
-      );
-    } else {
-      return navigator.clipboard.writeText(textToCopy);
-    }
-  }
-
-  // Hack for Safari not replaying the animation when we click on the button several times.
-  // Removing classes after the animation allows the toast to appear again.
-  toast.addEventListener("animationend", () => {
-    toast.classList.remove("show", "hide");
-    window.removeEventListener("scroll", onUserScrolls);
-  });
-
-  buttons.forEach((button) => {
-    const { textToCopy, toastCopySuccessText } = button.dataset;
-
-    async function onUserClicksOnCopyButton() {
-      button.removeEventListener("click", onUserClicksOnCopyButton);
-
-      toast.classList.remove("show", "hide");
-      toastContent.textContent = toastCopySuccessText;
-
-      try {
-        await copyText(textToCopy);
-        await showToast();
-      } catch (err) {
-        console.error("Failed to copy text:", textToCopy, err);
-      } finally {
-        button.addEventListener("click", onUserClicksOnCopyButton);
-        window.addEventListener("scroll", onUserScrolls);
-      }
-    }
-
-    button.addEventListener("click", onUserClicksOnCopyButton);
-  });
-
-  toast.addEventListener("click", hideToast);
-</script>
+<script src="./scripts/index.ts"></script>
