--- a/src/components/Yuna.astro
+++ b/src/components/Yuna.astro
@@ -10,4 +10,5 @@ const { width, height, class: cssClasses, alt = "" } = Astro.props;
   height={height}
   alt={alt}
   class:list={["rounded-t-full", "rounded-b-full", cssClasses]}
+  loading="eager"
 />
