--- a/src/components/@common/CallToAction.astro
+++ b/src/components/@common/CallToAction.astro
@@ -53,29 +53,11 @@ const iconSize = variant === "transparent" ? 18 : 24;
 ---
 
 <HTMLTag {...htmlAttributes}>
-  {
-    leftIcon && (
-      <Icon
-        class="contents"
-        name={leftIcon}
-        width={iconSize}
-        height={iconSize}
-      />
-    )
-  }
+  {leftIcon && <Icon name={leftIcon} width={iconSize} height={iconSize} />}
   <span>
     <slot />
   </span>
-  {
-    rightIcon && (
-      <Icon
-        class="contents"
-        name={rightIcon}
-        width={iconSize}
-        height={iconSize}
-      />
-    )
-  }
+  {rightIcon && <Icon name={rightIcon} width={iconSize} height={iconSize} />}
 </HTMLTag>
 
 <style>
