--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -49,7 +49,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id="1"
-                  class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] translate-x-1/2 opacity-20"
+                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-details" />
                 <span class="text-label-medium lg:text-label-large"
@@ -59,7 +59,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id="1"
-                  class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] rotate-[180deg] translate-x-1/2 opacity-20"
+                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] rotate-[180deg] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-kindness" />
                 <span class="text-label-medium lg:text-label-large"
@@ -69,7 +69,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id="1"
-                  class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] translate-x-1/2 opacity-20"
+                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-fiability" />
                 <span class="text-label-medium lg:text-label-large"
@@ -79,7 +79,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id="1"
-                  class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] rotate-[180deg] translate-x-1/2 opacity-20"
+                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] rotate-[180deg] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-sincerity" />
                 <span class="text-label-medium lg:text-label-large"
@@ -89,7 +89,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id="1"
-                  class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] translate-x-1/2 opacity-20"
+                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-creative" />
                 <span class="text-label-medium lg:text-label-large"
