fix plan du site urls

--- a/src/components/pages/plan-du-site/Content.astro
+++ b/src/components/pages/plan-du-site/Content.astro
@@ -51,7 +51,7 @@ import CallToAction from "../../@common/CallToAction.astro";
         <h2 class="text-headline-small">Arborescence secondaire :</h2>
         <ul class="ml-7 list-disc list-outside text-body-medium">
           <li>
-            <CallToAction href="/plan-sute-site" variant="transparent">
+            <CallToAction href="/plan-du-site" variant="transparent">
               Plan du site
             </CallToAction>
           </li>
@@ -61,7 +61,7 @@ import CallToAction from "../../@common/CallToAction.astro";
             </CallToAction>
           </li>
           <li>
-            <CallToAction href="/glossaire-ux" variant="transparent">
+            <CallToAction href="/glossaire-ux-design" variant="transparent">
               Glossaire UX
             </CallToAction>
           </li>
