transpile optional chaining

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -59,7 +59,7 @@ const backgroundFormCSSClasses = showBackgroundForm
             Envie de travailler avec nous ?
           </h2>
           <p
-            class="lg:mb-10 text-headline-extra-large lg:text-display-small leading-[normal]"
+            class="text-headline-extra-large lg:text-display-small leading-[normal]"
           >
             Contactez-nous à l’adresse
             <CallToAction
@@ -75,7 +75,7 @@ const backgroundFormCSSClasses = showBackgroundForm
             type="secondary"
             textToCopy="hello@team-ux.com"
             toastCopySuccessText="Notre adresse e-mail a été copiée dans votre presse-papiers !"
-            class="max-lg:hidden"
+            class="max-lg:hidden lg:mt-10"
           >
             Copier notre adresse email dans votre presse-papiers
           </ButtonCopyText>
