--- a/src/components/pages/projets/AllProjects/LargeProject/index.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject/index.astro
@@ -124,7 +124,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
   {
     project.images && (
       <!-- 22px: height of the title "open gallery" -->
-      <details class="gallery lg:-translate-y-[22px]">
+      <details class="gallery lg:-translate-y-[22px] -mb-[22px]">
         <CallToAction
           as="summary"
           type="primary"
