empty alt for small projects

--- a/src/components/pages/projets/AllProjects/SmallProject.astro
+++ b/src/components/pages/projets/AllProjects/SmallProject.astro
@@ -22,6 +22,7 @@ const { project } = Astro.props;
     ]}
     width={200}
     height={80}
+    alt=""
   />
 
   <p class="mb-5 text-headline-small lg:text-label-large">
