--- a/src/components/TeamUXStamp.astro
+++ b/src/components/TeamUXStamp.astro
@@ -6,6 +6,7 @@ import Image from "./@common/Image.astro";
   srcSet={["/images/stamp.png", "/images/stamp.avif", "/images/stamp.webp"]}
   width={200}
   height={200}
+  alt=""
 />
 
 <!-- why u not working :(
