--- a/src/components/TeamUXStamp.astro
+++ b/src/components/TeamUXStamp.astro
@@ -1,13 +1,9 @@
 ---
-import Image from "./@common/Image.astro";
+import Picture from "./@common/Picture.astro";
+import Stamp from "../images/stamp-team-ux.png";
 ---
 
-<Image
-  srcSet={["/images/stamp.png", "/images/stamp.avif", "/images/stamp.webp"]}
-  width={200}
-  height={200}
-  alt=""
-/>
+<Picture src={Stamp} width={200} height={200} />
 
 <!-- why u not working :(
 <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
