--- a/src/components/Daniela.astro
+++ b/src/components/Daniela.astro
@@ -1,17 +1,13 @@
 ---
-import Image from "./@common/Image.astro";
+import Picture from "./@common/Picture.astro";
+import Daniela from "../images/daniela.png";
 
-const { width, height, class: cssClasses } = Astro.props;
+const { width, height, class: cssClasses, alt = "" } = Astro.props;
 ---
 
-<Image
-  srcSet={[
-    "/images/daniela.png",
-    "/images/daniela.avif",
-    "/images/daniela.webp",
-  ]}
-  alt=""
-  width={width}
-  height={height}
+<Picture
+  src={Daniela}
+  alt={alt}
   class:list={["rounded-t-full", "rounded-b-full", cssClasses]}
+  loading="eager"
 />
