--- a/src/components/pages/projets/AllProjects/SmallProject.astro
+++ b/src/components/pages/projets/AllProjects/SmallProject.astro
@@ -1,6 +1,7 @@
 ---
 import Tag from "../../../@common/Tag.astro";
-import Image from "../../../@common/Image.astro";
+import Picture from "../../../@common/Picture.astro";
+
 interface Props {
   projects: {
     name: string;
@@ -13,16 +14,11 @@ const { project } = Astro.props;
 ---
 
 <div class="p-5 lg:p-10 bg-surface5 rounded-[26px]">
-  <Image
+  <Picture
     class="mb-8 rounded-[12px] border border-neutral3"
-    srcSet={[
-      `/images/projets/logo-${project.logo}.png`,
-      `/images/projets/logo-${project.logo}.avif`,
-      `/images/projets/logo-${project.logo}.webp`,
-    ]}
+    src={import(`../../../../images/projets/logos/logo-${project.logo}.png`)}
     width={200}
     height={80}
-    alt=""
   />
 
   <p class="mb-5 text-headline-small lg:text-label-large">
