--- a/src/components/pages/notre-manifeste/Signatures.astro
+++ b/src/components/pages/notre-manifeste/Signatures.astro
@@ -24,7 +24,7 @@ import SignatureDaniela from "../../../images/signature-daniela.png";
     </div>
     <div class="flex flex-col items-center space-y-4">
       <Picture
-        srcSet={SignatureDaniela}
+        src={SignatureDaniela}
         width={210}
         height={111}
         alt="Signature de Yuna Orsini"
