give sizes to brush

--- a/src/components/@common/Picture.astro
+++ b/src/components/@common/Picture.astro
@@ -15,7 +15,7 @@ const {
   width,
   height,
   alt = "",
-  densities = [2],
+  densities = [1, 2],
   loading = "lazy",
   ...props
 } = Astro.props;
