--- a/src/components/Daniela.astro
+++ b/src/components/Daniela.astro
@@ -10,4 +10,6 @@ const { width, height, class: cssClasses, alt = "" } = Astro.props;
   alt={alt}
   class:list={["rounded-t-full", "rounded-b-full", cssClasses]}
   loading="eager"
+  width={width}
+  height={height}
 />
