--- a/src/components/pages/notre-manifeste/Convictions.astro
+++ b/src/components/pages/notre-manifeste/Convictions.astro
@@ -14,12 +14,16 @@ import Brush from "../../@common/Brush.astro";
     <div class="col-span-full lg:col-start-2 lg:col-span-5 relative isolate">
       <Brush
         id={1}
-        class="hidden lg:block absolute z-[-1] w-[250px] h-[297px] top-[260px] right-[-110px] rotate-[-45deg]"
+        width={250}
+        height={297}
+        class="hidden lg:block absolute z-[-1] top-[260px] right-[-110px] rotate-[-45deg]"
       />
 
       <Brush
         id={4}
-        class="hidden lg:block absolute z-[-1] w-[330px] h-[328px] top-[965px] left-[-95px]"
+        width={330}
+        height={328}
+        class="hidden lg:block absolute z-[-1] top-[965px] left-[-95px]"
       />
 
       <ul class="flex flex-col space-y-1">
