--- a/src/components/Yuna.astro
+++ b/src/components/Yuna.astro
@@ -2,7 +2,7 @@
 import Yuna from "../images/yuna.png";
 import Picture from "./@common/Picture.astro";
 
-const { width, height, class: cssClasses, alt = "" } = Astro.props;
+const { width, height, class: cssClasses, alt = "", ...props } = Astro.props;
 ---
 
 <Picture
@@ -10,4 +10,6 @@ const { width, height, class: cssClasses, alt = "" } = Astro.props;
   alt={alt}
   class:list={["rounded-t-full", "rounded-b-full", cssClasses]}
   loading="eager"
+  width={width}
+  height={height}
 />
