--- a/src/components/pages/homepage/ProjectsTeasing/index.astro
+++ b/src/components/pages/homepage/ProjectsTeasing/index.astro
@@ -30,7 +30,9 @@ const {
       >
         <Brush
           id={3}
-          class="hidden lg:block absolute z-[-1] w-[156px] h-[145px] translate-x-[-60px] translate-y-[-60px]"
+          width={156}
+          height={145}
+          class="hidden lg:block absolute z-[-1] translate-x-[-60px] translate-y-[-60px]"
         />
         <Teasing content={teasing1} />
       </li>
@@ -44,7 +46,9 @@ const {
       >
         <Brush
           id={3}
-          class="hidden 2xl:block absolute right-0 bottom-0 z-[-1] w-[215px] h-[200px] translate-x-[105px] translate-y-[100px]"
+          width={215}
+          height={200}
+          class="hidden 2xl:block absolute right-0 bottom-0 z-[-1] translate-x-[105px] translate-y-[100px]"
         />
         <Teasing content={teasing3} />
       </li>
