--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -49,7 +49,9 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id={1}
-                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
+                  width={100}
+                  height={119}
+                  class="absolute z-[-1] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-details" />
                 <span class="text-label-medium lg:text-label-large"
@@ -59,7 +61,9 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id={1}
-                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] rotate-[180deg] -translate-x-1/2 opacity-20"
+                  width={100}
+                  height={119}
+                  class="absolute z-[-1] left-[50%] top-[-7px] rotate-[180deg] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-kindness" />
                 <span class="text-label-medium lg:text-label-large"
@@ -69,6 +73,8 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id={1}
+                  width={100}
+                  height={119}
                   class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-fiability" />
@@ -79,7 +85,9 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id={1}
-                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] rotate-[180deg] -translate-x-1/2 opacity-20"
+                  width={100}
+                  height={119}
+                  class="absolute z-[-1] left-[50%] top-[-7px] rotate-[180deg] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-sincerity" />
                 <span class="text-label-medium lg:text-label-large"
@@ -89,7 +97,9 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id={1}
-                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
+                  width={100}
+                  height={119}
+                  class="absolute z-[-1] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-creative" />
                 <span class="text-label-medium lg:text-label-large"
