--- a/src/components/pages/notre-manifeste/Introduction.astro
+++ b/src/components/pages/notre-manifeste/Introduction.astro
@@ -14,11 +14,15 @@ import BackgroundForm1 from "../../BackgroundForm1.astro";
         <div class="isolate relative">
           <Brush
             id={1}
-            class="absolute z-[-1] left-1/2 max-lg:translate-x-[calc(-50%-60px)] lg:left-auto lg:right-[-202px] top-[calc(100%-60px)] lg:top-[-22px] w-[214px] h-[254px] lg:w-[321px] lg:h-[381px]"
+            width={321}
+            height={381}
+            class="absolute z-[-1] left-1/2 max-lg:translate-x-[calc(-50%-60px)] lg:left-auto lg:right-[-202px] top-[calc(100%-60px)] lg:top-[-22px] max-lg:w-[214px] max-lg:h-[254px]"
           />
           <Brush
             id={4}
-            class="absolute z-[-2] right-1/2 max-lg:translate-x-[calc(-50%+280px)] lg:right-[-361px] top-[calc(100%-60px)] lg:top-[-22px] lg:w-[383px] lg:h-[381px] w-[255px] h-[254px]"
+            width={383}
+            height={381}
+            class="absolute z-[-2] right-1/2 max-lg:translate-x-[calc(-50%+280px)] lg:right-[-361px] top-[calc(100%-60px)] lg:top-[-22px] max-lg:w-[255px] max-lg:h-[254px]"
           />
           <BackgroundForm1
             class="absolute z-[-3] right-1/2 max-lg:translate-x-[calc(-50%+880px)] max-lg:-bottom-[200px] lg:right-[-770px] lg:-bottom-[100px] 2xl:right-[-1060px] 2xl:bottom-[-160px]"
