--- a/src/components/pages/projets/AllProjects/index.astro
+++ b/src/components/pages/projets/AllProjects/index.astro
@@ -18,6 +18,8 @@ import SmallProject from "./SmallProject.astro";
                 {projectGroupIndex === 0 && (
                   <Brush
                     id={4}
+                    width={490}
+                    height={487}
                     class:list={[
                       "hidden",
                       "lg:block",
@@ -25,8 +27,6 @@ import SmallProject from "./SmallProject.astro";
                       "z-[-1]",
                       "right-[-20px]",
                       "top-0",
-                      "w-[490px]",
-                      "h-[487px]",
                     ]}
                   />
                 )}
@@ -71,28 +71,36 @@ import SmallProject from "./SmallProject.astro";
                 {projectGroupIndex === 1 && (
                   <Brush
                     id={3}
-                    class="absolute z-[-1] w-[150.5px] h-[140px] lg:w-[200px] lg:h-[186px] top-2.5 lg:left-[35px] rotate-[106.935deg]"
+                    width={200}
+                    height={186}
+                    class="absolute z-[-1] mx-lg:w-[150.5px] max-lg:h-[140px] top-2.5 lg:left-[35px] rotate-[106.935deg]"
                   />
                 )}
 
                 {projectGroupIndex === 1 && (
                   <Brush
                     id={3}
-                    class="lg:hidden absolute z-[-1] w-[150.5px] h-[140px] bottom-[7px] right-0 rotate-[-90deg]"
+                    width={151}
+                    height={140}
+                    class="lg:hidden absolute z-[-1] bottom-[7px] right-0 rotate-[-90deg]"
                   />
                 )}
 
                 {projectGroupIndex === 3 && (
                   <Brush
                     id={3}
-                    class="absolute z-[-1] w-[150.5px] h-[140px] lg:w-[215px] lg:h-[200px] left-0 lg:left-auto lg:right-2.5 top-2 rotate-[106.935deg] lg:rotate-0"
+                    width={215}
+                    height={200}
+                    class="absolute z-[-1] max-lg:w-[151px] max-lg:h-[140px] left-0 lg:left-auto lg:right-2.5 top-2 rotate-[106.935deg] lg:rotate-0"
                   />
                 )}
 
                 {projectGroupIndex === 3 && (
                   <Brush
                     id={3}
-                    class="lg:hidden absolute z-[-1] w-[150.5px] h-[140px] bottom-[7px] right-0 rotate-[-90deg]"
+                    width={151}
+                    height={140}
+                    class="lg:hidden absolute z-[-1] bottom-[7px] right-0 rotate-[-90deg]"
                   />
                 )}
 
