density x2 only for logos

--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -104,9 +104,10 @@ const { block1, block2 } = data;
 
                 <Picture
                   src={Certif_Access42}
-                  alt="Access42"
                   width={80}
                   height={58}
+                  alt="Access42"
+                  densities={[1, 2]}
                 />
               </li>
               <li>
@@ -119,6 +120,7 @@ const { block1, block2 } = data;
                   width={170}
                   height={56}
                   alt="Interaction Design Foundation"
+                  densities={[1, 2]}
                 />
               </li>
               <li>
@@ -134,6 +136,7 @@ const { block1, block2 } = data;
                   width={140}
                   height={36}
                   alt="Opquast"
+                  densities={[1, 2]}
                 />
               </li>
               <li>
@@ -149,6 +152,7 @@ const { block1, block2 } = data;
                   width={106}
                   height={40}
                   alt="Shifta by ELISAVA"
+                  densities={[1, 2]}
                 />
               </li>
               <li>
@@ -160,6 +164,7 @@ const { block1, block2 } = data;
                   width={120}
                   height={44}
                   alt="Institut du Numérique Responsable"
+                  densities={[1, 2]}
                 />
               </li>
             </ul>
@@ -181,6 +186,7 @@ const { block1, block2 } = data;
                   width={90}
                   height={49}
                   alt="Desino Etico"
+                  densities={[1, 2]}
                 />
               </li>
               <li>
@@ -191,6 +197,7 @@ const { block1, block2 } = data;
                   width={105}
                   height={49}
                   alt="Designers Éthiques"
+                  densities={[1, 2]}
                 />
               </li>
             </ul>
