--- a/src/components/pages/projets/AllProjects/LargeProject.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject.astro
@@ -39,6 +39,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
         src={import(`../../../../images/projets/logos/logo-${project.logo}.png`)}
         width={200}
         height={80}
+        densities={[1, 2]}
       />
 
       <div>
