--- a/src/components/pages/projets/AllProjects/SmallProject.astro
+++ b/src/components/pages/projets/AllProjects/SmallProject.astro
@@ -19,6 +19,7 @@ const { project } = Astro.props;
     src={import(`../../../../images/projets/logos/logo-${project.logo}.png`)}
     width={200}
     height={80}
+    densities={[1, 2]}
   />
 
   <p class="mb-5 text-headline-small lg:text-label-large">
