--- a/src/components/pages/nos-deux-profils/Profiles.astro
+++ b/src/components/pages/nos-deux-profils/Profiles.astro
@@ -22,9 +22,7 @@ import Profile from "./Profile.astro";
             class="absolute z-[-1] max-lg:w-[129px] left-0 bottom-0 rotate-[180deg]"
           />
           <Yuna
-            width={89}
-            height={220}
-            class="max-lg:w-[82px] max-lg:h-[204px] max-lg:ml-[24px] lg:mx-auto"
+            class="w-[82px] h-[204px] lg:w-[89px] lg:h-[220px] max-lg:ml-[24px] lg:mx-auto"
             alt="Portrait de Yuna Orsini"
           />
         </div>
@@ -40,9 +38,7 @@ import Profile from "./Profile.astro";
             class="absolute z-[-1] max-lg:w-[150px] left-[-10px] lg:left-0 bottom-[11px] rotate-[90deg]"
           />
           <Daniela
-            width={89}
-            height={220}
-            class="max-lg:w-[82px] max-lg:h-[204px] max-lg:ml-[24px] mx-auto"
+            class="w-[82px] h-[204px] lg:w-[89px] lg:h-[220px] max-lg:ml-[24px] mx-auto"
             alt="Portrait de Daniela Peñaranda"
           />
         </div>
