Revert "give sizes to brush"
This reverts commit 4f9fad2079e5ff601f1d02aff5a9f755babd6364.

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -48,15 +48,11 @@ const backgroundFormCSSClasses = showBackgroundForm
 
           <Brush
             id={2}
-            width={232}
-            height={202}
-            class="absolute z-[-1] top-[-35px] lg:top-[-80px] left-[15px] rotate-[8.837deg]"
+            class="absolute z-[-1] top-[-35px] lg:top-[-80px] left-[15px] w-[232px] h-[202px] rotate-[8.837deg]"
           />
           <Brush
             id={2}
-            width={355}
-            height={308}
-            class="absolute z-[-1] right-[5px] bottom-[-50px] lg:right-[-101px] lg:bottom-[-66px] max-lg:w-[194px] max-lg:h-[168px] rotate-[13deg] lg:rotate-0"
+            class="absolute z-[-1] right-[5px] bottom-[-50px] lg:right-[-101px] lg:bottom-[-66px] w-[194px] h-[168px] lg:w-[355px] lg:h-[308px] rotate-[13deg] lg:rotate-0"
           />
 
           <h2 class="mb-10 lg:mb-6 text-headline-small lg:text-headline-medium">
