--- a/src/components/pages/homepage/Expertises/index.astro
+++ b/src/components/pages/homepage/Expertises/index.astro
@@ -32,27 +32,21 @@ import Expertise from "./Expertise.astro";
                 {index === 0 && (
                   <Brush
                     id={1}
-                    width={237}
-                    height={281}
-                    class="hidden lg:block absolute top-[28px] left-[-80px] z-[-1] rotate-[136.069deg]"
+                    class="hidden lg:block absolute top-[28px] left-[-80px] z-[-1] w-[237px] h-[281px] rotate-[136.069deg]"
                   />
                 )}
 
                 {index === 1 && (
                   <Brush
                     id={4}
-                    width={490}
-                    height={487}
-                    class="max-lg:hidden absolute top-[-39px] lg:left-[300px] xl:left-[481px] z-[-1] aspect-[490/487]"
+                    class="max-lg:hidden absolute top-[-39px] lg:left-[300px] xl:left-[481px] z-[-1] w-[490px] aspect-[490/487]"
                   />
                 )}
 
                 {index === 2 && (
                   <Brush
                     id={1}
-                    width={222}
-                    height={263}
-                    class="hidden lg:block absolute top-[-89px] left-[-102px] z-[-1] rotate-[180deg]"
+                    class="hidden lg:block absolute top-[-89px] left-[-102px] z-[-1] w-[222px] h-[263px] rotate-[180deg]"
                   />
                 )}
               </li>
