--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -49,9 +49,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id={1}
-                  width={100}
-                  height={119}
-                  class="absolute z-[-1] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
+                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-details" />
                 <span class="text-label-medium lg:text-label-large"
@@ -61,9 +59,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id={1}
-                  width={100}
-                  height={119}
-                  class="absolute z-[-1] left-[50%] top-[-7px] rotate-[180deg] -translate-x-1/2 opacity-20"
+                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] rotate-[180deg] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-kindness" />
                 <span class="text-label-medium lg:text-label-large"
@@ -73,8 +69,6 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id={1}
-                  width={100}
-                  height={119}
                   class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-fiability" />
@@ -85,9 +79,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id={1}
-                  width={100}
-                  height={119}
-                  class="absolute z-[-1] left-[50%] top-[-7px] rotate-[180deg] -translate-x-1/2 opacity-20"
+                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] rotate-[180deg] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-sincerity" />
                 <span class="text-label-medium lg:text-label-large"
@@ -97,9 +89,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
               <li>
                 <Brush
                   id={1}
-                  width={100}
-                  height={119}
-                  class="absolute z-[-1] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
+                  class="absolute z-[-1] w-[100px] h-[119px] left-[50%] top-[-7px] -translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-creative" />
                 <span class="text-label-medium lg:text-label-large"
